left align and fix unwanted enter behavior

--- a/frontend/src/components/Navbar/NavbarWorksheetSearch.module.css
+++ b/frontend/src/components/Navbar/NavbarWorksheetSearch.module.css
@@ -77,5 +77,5 @@
 
 .friendOptionText {
   flex-grow: 1;
-  text-align: center;
+  text-align: left;
 }
